# ChangeLog for net-im/meanwhile-gaim
# Copyright 2000-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-im/meanwhile-gaim/ChangeLog,v 1.3 2004/06/24 22:56:47 agriffis Exp $

  08 Jun 2004; David Holm <dholm@gentoo.org> meanwhile-gaim-0.78.ebuild:
  Added to ~ppc.

*meanwhile-gaim-0.78 (05 Jun 2004)

  05 Jun 2004; Don Seiler <rizzo@gentoo.org>; +metadata.xml,
  +meanwhile-gaim-0.78.ebuild:
  Initial add for Bug 53071.  Thanks to Jared Breland
