@@ -1,4 +1,6 @@
-MD5 f8b151617fff680386c8ad16df9274aa meanwhile-gaim-0.78.ebuild 852
 MD5 e94ef3aea0608f92ee92a298bc023069 ChangeLog 491
+MD5 f8b151617fff680386c8ad16df9274aa meanwhile-gaim-0.78.ebuild 852
 MD5 c1a2d7f113e28668f770c363bd5e761f metadata.xml 224
+MD5 9dc2d861b5dd1e1244b6f29567e26c3e meanwhile-gaim-0.79.ebuild 853
 MD5 6629c18628450671b445ab8e04f30f64 files/digest-meanwhile-gaim-0.78 71
+MD5 bf65714116b0ee4137a2feab2745499f files/digest-meanwhile-gaim-0.79 71
