@@ -1,0 +1,1 @@
+MD5 0959d88e267c7882fb2a056212ccbb2b meanwhile-gaim-0.79.tar.gz 315393
