@@ -1,6 +1,11 @@
 # ChangeLog for net-im/meanwhile-gaim
 # Copyright 2000-2004 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-im/meanwhile-gaim/ChangeLog,v 1.3 2004/06/24 22:56:47 agriffis Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-im/meanwhile-gaim/ChangeLog,v 1.4 2004/06/28 14:58:33 rizzo Exp $
+
+*meanwhile-gaim-0.79 (28 Jun 2004)
+
+  28 Jun 2004; Don Seiler <rizzo@gentoo.org> +meanwhile-gaim-0.79.ebuild:
+  Version bump
 
   08 Jun 2004; David Holm <dholm@gentoo.org> meanwhile-gaim-0.78.ebuild:
   Added to ~ppc.
